removing imcompatible things