@@ -3,11 +3,12 @@ package com.oreilly.hello;
 import java.time.LocalDate;
 import java.time.Month;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 public class InMemoryPersonRepository implements PersonRepository {
-    private static final List<Person> people = new ArrayList<>(List.of(
+    private static final List<Person> people = new ArrayList<>(Arrays.asList(
             new Person(1, "Grace", "Hopper", LocalDate.of(1906, Month.DECEMBER, 9)),
             new Person(2, "Ada", "Lovelace", LocalDate.of(1815, Month.DECEMBER, 10)),
             new Person(3, "Adele", "Goldberg", LocalDate.of(1945, Month.JULY, 7)),
